--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <canvas id="canvas"></canvas>
   <!-- 创建video标签 -->
-  <video id="video" autoplay muted>
-    <source src="./benpao.mp4" type="video/mp4">
+  <video id="video" autoplay muted >
+    <source src="./test.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <div id="dplayer"></div>
