--- a/remove-green.html
+++ b/remove-green.html
@@ -9,7 +9,8 @@
   <style>
     body {
       margin: 0;
-      overflow: hidden; /* 防止页面滚动 */
+      overflow: hidden;
+      /* 防止页面滚动 */
     }
 
     canvas {
@@ -102,6 +103,7 @@
 
     let isDragging = false;
     let lastMouseX, lastMouseY;
+    let scaleFactor = 1.0;
 
     // 监听鼠标按下事件
     renderer.domElement.addEventListener('mousedown', (event) => {
@@ -126,6 +128,13 @@
     // 监听鼠标释放事件
     renderer.domElement.addEventListener('mouseup', () => {
       isDragging = false;
+    });
+
+    // 监听鼠标滚轮事件
+    renderer.domElement.addEventListener('wheel', (event) => {
+      scaleFactor += event.deltaY * 0.001;
+      scaleFactor = Math.max(0.1, scaleFactor); // 设置最小缩放值
+      plane.scale.set(scaleFactor, scaleFactor, 1);
     });
 
     function animate() {
